[package]
name = "solana_http_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solana-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"
base64 = "0.21"
bs58 = "0.4"
rand = "0.8"
anyhow = "1.0"